.provarCaches/00D5f000005vwGkEAI/objects/rstk__sopickd__c.object
<CustomObject>
    <description>sopickd__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sopickd_picklistno__r.rstk__sopickh_picklistno__c &amp; &apos;_&apos; &amp;  rstk__sopickd_soline__r.rstk__externalid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_datereqd__c</fullName>
        <description>The date the inventory is required to be picked to the sales order line (for subsequent packaging and shipment). (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_iclocitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is the lookup to the individual inventory location.  Thru this lookup we can get the Location ID, Location Number and quantity information. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Location Details</label>
        <referenceTo>rstk__iclocitem__c</referenceTo>
        <relationshipLabel>iclocitem_iclocitem_sopickd</relationshipLabel>
        <relationshipName>sopickds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Inventory Item Number to be picked. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>icitem_item_sopickd</relationshipLabel>
        <relationshipName>sopickds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_picklistno__c</fullName>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Pick List Number</label>
        <referenceTo>rstk__sopickh__c</referenceTo>
        <relationshipLabel>Pick List Detail</relationshipLabel>
        <relationshipName>sopickds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_procqty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity specified by the user to be processed from this location. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Process Qty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The portion of the quantity required that has been allocated.  This is updated by the system when the data set is submitted for processing. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_qtyissue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The portion of the quantity required that has been issued (picked).  This is updated by the system when the data set is submitted for processing. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_qtyremaining__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The portion of the quantity required that remains to be processed. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_qtyreqd__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total quantity required for this item at this time. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Quantity Required</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_seq__c</fullName>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_shipdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Inventory Division from which the picking is to occur. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Ship From Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>sydiv_shipdiv_sopickd</relationshipLabel>
        <relationshipName>sopickds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sopickd_soline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Sales Order Line to which this demand belongs. (DD)</description>
        <inlineHelpText>Not applicable</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>rstk__soline__c</referenceTo>
        <relationshipLabel>soline_line_sopickd</relationshipLabel>
        <relationshipName>sopickds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Pick List Detail</label>
    <nameField>
        <label>Pick List Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pick List Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>